# Computer-Club

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Client.h  Club.h  Utils.h
include/events/: BaseEvent.h  ClientArrivalEvent.h  ClientLeaveEvent.h  ClientSitEvent.h  ClientWaitEvent.h  ErrorEvent.h
src/: Client.cpp  Club.cpp  Utils.cpp
src/events/: ClientArrivalEvent.cpp  ClientLeaveEvent.cpp  ClientSitEvent.cpp  ClientWaitEvent.cpp  ErrorEvent.cpp
test/: testComputerClub.cpp
test/data/: correct_input.txt  correct_output.txt  error_open_time_input.txt  table_busy_input.txt  table_busy_output.txt
